fixed header sticky on ios safari

--- a/src/styles.css
+++ b/src/styles.css
@@ -63,8 +63,9 @@
 
     .custom-header {
         min-height: 56px !important;
-        position: sticky !important;
-        position: -webkit-sticky !important;
+        position: fixed;
+        width: 100%;
+        top: 0;
     }
 }
 
